--- a/Manual/Keywords.html
+++ b/Manual/Keywords.html
@@ -11,7 +11,11 @@
         <style>
             table {
                 margin: 1em auto;
+				border: none;
             }
+			.corner {
+				border: none;
+			}
         </style>
     </head>
     <body>
@@ -26,7 +30,7 @@
                     <h2>On the Subject of Keywords</h2>
                     <p class="flavour-text">Thank goodness they left a post-it with the answers- or well... half of them...</p>
                     <p>In this module you will find a <em><strong>display</strong> with the first half of an 8-character long <strong>key</strong></em>, and a sticky note with the last half of <strong> 2 <em>words</em></strong>.</p>
-                    <p>First, <em>you need to know two two-digit numbers</em>, the first number is the first two digits that appear in the serial number if reading from left to right, <strong>which in this manual, will be referred to as number 'A'</strong>, and the other number is the first two digits that appear in the serial number if reading from right to left. <strong>which in this manual, will be referred to as number 'B'</strong>.</p>
+                    <p>First, <em>you need to know two 2-digit numbers</em>, the first number is the first two digits that appear in the serial number if reading from left to right, <strong>which in this manual, will be referred to as number 'A'</strong>, and the other number is the first two digits that appear in the serial number if reading from right to left. <strong>which in this manual, will be referred to as number 'B'</strong>.</p>
 
                     <h4>When you know the values of 'A' and 'B', do the following:</h4>
                     <ol>
@@ -34,20 +38,20 @@
                             <ul>
                                 <li>Go to the table on the next page and use <em>'A'</em> to find the last four letters of the key.</li>
                                 <li>Join it with the four letters on the display to get the full key.</li>
-                                <li>"Associate" the first letter of key, with the number 1, the second letter, with the number 2, repeat until you get to the eigth letter.</li>
+                                <li>"Associate" the first letter of the key with the number 1, the second letter with the number 2, and repeat until you get to the eighth letter.</li>
                             </ul>
                         </li>
                         <li><strong>Completing the words</strong>
                             <ul>
                                 <li>Go to the table on the next page and use <em>'B'</em> to find the first four letters of the words.</li>
-                                <li>Join it with one of the two four-letter half-words on the sticky note to get the full words. Repeat with the other half-word. You now have two words that will use when inputting the answers.</li>
+                                <li>Join it with one of the two 4-letter half-words on the sticky note to get the full words. Repeat with the other half-word. You now have two words that will use when inputting the answers.</li>
                             </ul>
                         </li>
                         <li><strong>Inputting the answers</strong>
                             <ul>
-                                <li>Write one of the two words, but everytime you use a letter that is in the key, use the "associated" number instead.</li>
-                                <li>If the answer was correct, the word you used in the sticky note will get a strikethrough.</li>
-                                <li>For example, if the key is "KEYWORDS" and the word you want to input is "COOLWORD", you need to input "C55L4567".</li>
+                                <li>Type both words using the keypad on the module, but everytime you use a letter that is in the key, use the "associated" number instead.</li>
+                                                                <li>For example, if the key is "KEYWORDS" and the word you want to input is "COOLWORD", you need to input "C55L4567".</li>
+								<li>If an answer was correct, the word you inputted will get a strikethrough in the sticky note.</li>
                                 <li>Note: The module will check to see if the answer was correct when the whole word has been written, not when an error is made.</li>
                             </ul>
                         </li>
@@ -58,7 +62,7 @@
             <div class="page page-bg-02">
                 <div class="page-header">
                     <span class="page-header-doc-title">Keep Talking and Nobody Explodes Mod</span>
-                    <span class="page-header-section-title">Passcodes</span>
+                    <span class="page-header-section-title">Keywords</span>
                 </div>
                 <div class="page-content">
                     <h3>"Word/Key completer" table</h3>
@@ -66,7 +70,7 @@
                     <div>
                         <table style="float: center;">
                           <tr>
-                            <th colspan="2" rowspan="2"></th>
+                            <th colspan="2" rowspan="2" class='corner'></th>
                             <th colspan="10">Second Digit</th>
                           </tr>
                           <tr>
