Fixed a bug, minor TP autosolver tweak, and manual update to latest on repo

--- a/Manual/Keywords.html
+++ b/Manual/Keywords.html
@@ -1,79 +1,83 @@
 ﻿<!DOCTYPE html>
 <html>
-    <head>
-        <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-        <title>Keywords — Keep Talking and Nobody Explodes Module</title>
-        <meta name="viewport" content="initial-scale=1">
-        <link rel="stylesheet" type="text/css" href="css/normalize.css">
-        <link rel="stylesheet" type="text/css" href="css/main.css">
-        <link rel="stylesheet" type="text/css" href="css/font.css">
-        <script src="js/ktane-utils.js"></script>
-        <style>
-            table {
-                margin: 1em auto;
-				border: none;
-            }
-			.corner {
-				border: none;
-			}
-        </style>
-    </head>
-    <body>
-        <div class="section">
-            <div class="page page-bg-01">
-                <div class="page-header">
-                    <span class="page-header-doc-title">Keep Talking and Nobody Explodes Mod</span>
-                    <span class="page-header-section-title">Keywords</span>
-                </div>
-                <div class="page-content">
-                    <img src="img/Component/Keywords.svg" class="diagram">
-                    <h2>On the Subject of Keywords</h2>
-                    <p class="flavour-text">Thank goodness they left a post-it with the answers- or well... half of them...</p>
-                    <p>In this module you will find a <em><strong>display</strong> with the first half of an 8-character long <strong>key</strong></em>, and a sticky note with the last half of <strong> 2 <em>words</em></strong>.</p>
-                    <p>First, <em>you need to know two 2-digit numbers</em>, the first number is the first two digits that appear in the serial number if reading from left to right, <strong>which in this manual, will be referred to as number 'A'</strong>, and the other number is the first two digits that appear in the serial number if reading from right to left. <strong>which in this manual, will be referred to as number 'B'</strong>.</p>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="initial-scale=1">
+    <title>Keywords — Keep Talking and Nobody Explodes Module</title>
+    <link rel="stylesheet" type="text/css" href="css/font.css">
+    <link rel="stylesheet" type="text/css" href="css/normalize.css">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <script src="js/ktane-utils.js"></script>
+    <style>
+        table {
+            margin: 1em auto;
+            border: none;
+        }
 
-                    <h4>When you know the values of 'A' and 'B', do the following:</h4>
-                    <ol>
-                        <li><strong>Completing the key</strong>
-                            <ul>
-                                <li>Go to the table on the next page and use <em>'A'</em> to find the last four letters of the key.</li>
-                                <li>Join it with the four letters on the display to get the full key.</li>
-                                <li>"Associate" the first letter of the key with the number 1, the second letter with the number 2, and repeat until you get to the eighth letter.</li>
-                            </ul>
-                        </li>
-                        <li><strong>Completing the words</strong>
-                            <ul>
-                                <li>Go to the table on the next page and use <em>'B'</em> to find the first four letters of the words.</li>
-                                <li>Join it with one of the two 4-letter half-words on the sticky note to get the full words. Repeat with the other half-word. You now have two words that will use when inputting the answers.</li>
-                            </ul>
-                        </li>
-                        <li><strong>Inputting the answers</strong>
-                            <ul>
-                                <li>Type both words using the keypad on the module, but everytime you use a letter that is in the key, use the "associated" number instead.</li>
-                                                                <li>For example, if the key is "KEYWORDS" and the word you want to input is "COOLWORD", you need to input "C55L4567".</li>
-								<li>If an answer was correct, the word you inputted will get a strikethrough in the sticky note.</li>
-                                <li>Note: The module will check to see if the answer was correct when the whole word has been written, not when an error is made.</li>
-                            </ul>
-                        </li>
-                    </ol>
-                </div>
-                <div class="page-footer relative-footer">Page 1 of 2</div>
+        .corner {
+            border: none;
+        }
+    </style>
+</head>
+<body>
+    <div class="section">
+        <div class="page page-bg-01">
+            <div class="page-header">
+                <span class="page-header-doc-title">Keep Talking and Nobody Explodes Mod</span>
+                <span class="page-header-section-title">Keywords</span>
             </div>
-            <div class="page page-bg-02">
-                <div class="page-header">
-                    <span class="page-header-doc-title">Keep Talking and Nobody Explodes Mod</span>
-                    <span class="page-header-section-title">Keywords</span>
-                </div>
-                <div class="page-content">
-                    <h3>"Word/Key completer" table</h3>
-                    <p><em>Use this table to complete the words and the key.</em></p>
-                    <div>
-                        <table style="float: center;">
-                          <tr>
+            <div class="page-content">
+                <img src="img/Component/Keywords.svg" class="diagram">
+                <h2>On the Subject of Keywords</h2>
+                <p class="flavour-text">Thank goodness they left a post-it with the answers- or well... half of them...</p>
+                <p>In this module you will find a <em><strong>display</strong> with the first half of an 8-character long <strong>key</strong></em>, and a sticky note with the last half of <strong> 2 <em>words</em></strong>.</p>
+                <p>First, <em>you need to know two 2-digit numbers</em>, the first number is the first two digits that appear in the serial number if reading from left to right, <strong>which in this manual, will be referred to as number 'A'</strong>, and the other number is the first two digits that appear in the serial number if reading from right to left. <strong>which in this manual, will be referred to as number 'B'</strong>.</p>
+
+                <h4>When you know the values of 'A' and 'B', do the following:</h4>
+                <ol>
+                    <li>
+                        <strong>Completing the key</strong>
+                        <ul>
+                            <li>Go to the table on the next page and use <em>'A'</em> to find the last four letters of the key.</li>
+                            <li>Join it with the four letters on the display to get the full key.</li>
+                            <li>"Associate" the first letter of the key with the number 1, the second letter with the number 2, and repeat until you get to the eighth letter.</li>
+                        </ul>
+                    </li>
+                    <li>
+                        <strong>Completing the words</strong>
+                        <ul>
+                            <li>Go to the table on the next page and use <em>'B'</em> to find the first four letters of the words.</li>
+                            <li>Join it with one of the two 4-letter half-words on the sticky note to get the full words. Repeat with the other half-word. You now have two words that will use when inputting the answers.</li>
+                        </ul>
+                    </li>
+                    <li>
+                        <strong>Inputting the answers</strong>
+                        <ul>
+                            <li>Type both words using the keypad on the module, but everytime you use a letter that is in the key, use the "associated" number instead.</li>
+                            <li>For example, if the key is "KEYWORDS" and the word you want to input is "COOLWORD", you need to input "C55L4567".</li>
+                            <li>If an answer was correct, the word you inputted will get a strikethrough in the sticky note.</li>
+                            <li>Note: The module will check to see if the answer was correct when the whole word has been written, not when an error is made.</li>
+                        </ul>
+                    </li>
+                </ol>
+            </div>
+            <div class="page-footer relative-footer">Page 1 of 2</div>
+        </div>
+        <div class="page page-bg-02">
+            <div class="page-header">
+                <span class="page-header-doc-title">Keep Talking and Nobody Explodes Mod</span>
+                <span class="page-header-section-title">Keywords</span>
+            </div>
+            <div class="page-content">
+                <h3>"Word/Key completer" table</h3>
+                <p><em>Use this table to complete the words and the key.</em></p>
+                <div>
+                    <table style="margin:auto;">
+                        <tr>
                             <th colspan="2" rowspan="2" class='corner'></th>
                             <th colspan="10">Second Digit</th>
-                          </tr>
-                          <tr>
+                        </tr>
+                        <tr>
                             <th>0</th>
                             <th>1</th>
                             <th>2</th>
@@ -84,8 +88,8 @@
                             <th>7</th>
                             <th>8</th>
                             <th>9</th>
-                          </tr>
-                          <tr>
+                        </tr>
+                        <tr>
                             <th rowspan="10">First Digit</th>
                             <th>0</th>
                             <td>GAHO</td>
@@ -98,8 +102,8 @@
                             <td>OXFI</td>
                             <td>ORJA</td>
                             <td>LOYE</td>
-                          </tr>
-                          <tr>
+                        </tr>
+                        <tr>
                             <th>1</th>
                             <td>XIED</td>
                             <td>XIDA</td>
@@ -111,8 +115,8 @@
                             <td>JOZE</td>
                             <td>INWO</td>
                             <td>HULI</td>
-                          </tr>
-                          <tr>
+                        </tr>
+                        <tr>
                             <th>2</th>
                             <td>GANO</td>
                             <td>LIXO</td>
@@ -124,8 +128,8 @@
                             <td>OVFI</td>
                             <td>ORVA</td>
                             <td>NOYE</td>
-                          </tr>
-                          <tr>
+                        </tr>
+                        <tr>
                             <th>3</th>
                             <td>GIED</td>
                             <td>KIDA</td>
@@ -137,8 +141,8 @@
                             <td>ROZE</td>
                             <td>INSO</td>
                             <td>SULI</td>
-                          </tr>
-                          <tr>
+                        </tr>
+                        <tr>
                             <th>4</th>
                             <td>FAHO</td>
                             <td>WIVO</td>
@@ -150,8 +154,8 @@
                             <td>OHFI</td>
                             <td>OHJA</td>
                             <td>HOYE</td>
-                          </tr>
-                          <tr>
+                        </tr>
+                        <tr>
                             <th>5</th>
                             <td>XIEQ</td>
                             <td>XIBA</td>
@@ -163,8 +167,8 @@
                             <td>NOZE</td>
                             <td>IMWO</td>
                             <td>HUSI</td>
-                          </tr>
-                          <tr>
+                        </tr>
+                        <tr>
                             <th>6</th>
                             <td>NAGO</td>
                             <td>XILO</td>
@@ -176,8 +180,8 @@
                             <td>OFVI</td>
                             <td>OVRA</td>
                             <td>YONE</td>
-                          </tr>
-                          <tr>
+                        </tr>
+                        <tr>
                             <th>7</th>
                             <td>DIEG</td>
                             <td>DIKA</td>
@@ -189,8 +193,8 @@
                             <td>ZORE</td>
                             <td>ISNO</td>
                             <td>LUSI</td>
-                          </tr>
-                          <tr>
+                        </tr>
+                        <tr>
                             <th>8</th>
                             <td>HAFO</td>
                             <td>VIWO</td>
@@ -202,8 +206,8 @@
                             <td>OFHI</td>
                             <td>OJHA</td>
                             <td>YOHE</td>
-                          </tr>
-                          <tr>
+                        </tr>
+                        <tr>
                             <th>9</th>
                             <td>QIEX</td>
                             <td>BIXA</td>
@@ -215,12 +219,12 @@
                             <td>ZONE</td>
                             <td>IWMO</td>
                             <td>SUHI</td>
-                          </tr>
-                        </table>
-                    </div>
+                        </tr>
+                    </table>
                 </div>
-                <div class="page-footer relative-footer">Page 2 of 2</div>
             </div>
+            <div class="page-footer relative-footer">Page 2 of 2</div>
         </div>
-    </body>
+    </div>
+</body>
 </html>
